--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -1,69 +1,83 @@
 .signup-page-container {
-    display: flex;
-    height: 100vh;
-  }
-  
-  .signup-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    padding: 50px;
-    background-color: #f8f8f8;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .signup-form h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
-  }
-  
-  .errors {
-    margin-bottom: 10px;
-    font-size: 14px;
-    color: #ff0000;
-  }
-  
-  label {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-  
-  span {
-    margin-bottom: 5px;
-    font-size: 16px;
-    color: #333;
-  }
-  
-  input[type="email"],
-  input[type="password"],
-  input[type="text"],
-  select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  input[type="file"] {
-    margin-bottom: 10px;
-  }
-  
-  input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #555;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f4f4f4;
+}
+
+.image-carousel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  background: url('/assets/images/login-background.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+  background-color: white;
+}
+
+.signup-form {
+  width: 80%;
+}
+
+.signup-form h2 {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+.signup-form label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.signup-form input[type="text"],
+.signup-form input[type="email"],
+.signup-form input[type="password"] {
+  padding: 0.7rem;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  outline: none;
+}
+
+.signup-form input[type="submit"] {
+  margin-top: 1rem;
+  padding: 0.7rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #333;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.errors-list {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 1rem;
+  color: red;
+}
+
+#tag-line {
+  text-align: center;
+  margin-bottom: 1rem;
+}
