--- a/frontend/src/components/MusicBar/MusicBar.css
+++ b/frontend/src/components/MusicBar/MusicBar.css
@@ -1,6 +1,6 @@
 .footer-container {
     position: absolute;
-    z-index: 5;
+    z-index: 10;
     min-width: 620px;
     width: 100%;
     height: 100px;
@@ -39,25 +39,38 @@
     width: 100%;
 }
 
-.now-playing-artist-info-name {
-    color: black;
-    font-size: 0.8rem;
+.now-playing-info-name {
+    color: white;
+    font-size: 20px;
     margin-bottom: 6px;
 }
 
-.now-playing-artist-info-artist {
-    color: black;
-    font-size: 0.6rem;
+.now-playing-info-artist {
+    color: white;
+    font-size: 15px;
+}
+
+.now-playing-info-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 14px;
+    /* Adjust the margin to create space between the image and text */
 }
 
 .now-playing-image-container {
     isolation: isolate;
     position: relative;
-    width: 60px;
-    height: 60px;
-    display: flex;
+    width: 90px;
+    /* Adjust the width to make the image bigger */
+    height: 100%;
+    /* Adjust the height to fill the music bar */
 }
 
+.now-playing-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 .play-bar-track-info img {
     max-width: 100%;
