--- a/frontend/src/components/NavBar/SidebarLinks.css
+++ b/frontend/src/components/NavBar/SidebarLinks.css
@@ -22,7 +22,7 @@
 }
 
 .sidebarLinks li {
-  margin-bottom: 10px;
+  margin-bottom: 50px;
 }
 
 .sidebarLinks li a {
@@ -39,17 +39,19 @@
 }
 
 .sidebarLinks li button {
+  margin-right: 25px;
   background-color: transparent;
   border: none;
-  color: #000000;
+  color: #ffffff;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bold;
   transition: color 0.3s ease;
+  margin-bottom: 30px;
 }
 
 .sidebarLinks li button:hover {
-  color: #d503ff;
+  color: #0400ff;
 }
 
 .modal {
