--- a/frontend/src/components/Profile/ProfileHeader.css
+++ b/frontend/src/components/Profile/ProfileHeader.css
@@ -1,15 +1,37 @@
 /* ProfileHeader.css */
 
 .profile-header {
+  position: fixed;
+  /* top: 0; */
+  right: 0;
+  bottom: 0;
+  top: 170px;
+  width: 300px; /* Adjust the width as needed */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start;  */
+  align-items: center; 
   background-color: #f2f2f2;
   padding: 20px;
 }
+/* 
+.profile-header > * {
+  margin-bottom: 10px;
+} */
 
-.profile-info {
+.profile-info > {
   display: flex;
+  position: absolute;
+  flex-direction: column;
+  gap: 10px; /* Adjust the gap as needed */
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
+  /* flex-s: end; */
+  width: 500px; /* Adjust the width as needed */
+}
+
+.profile-info > * {
+  margin-bottom: 10px; /* Adjust the margin as needed */
 }
 
 .follower-info {
@@ -35,15 +57,15 @@
   margin-top: 20px;
 }
 
-.profile-header-main {
+/* .profile-header-main {
   position: sticky;
-  top: 0;
+  top: 100;
   background-color: #f2f2f2;
   padding: 20px;
   z-index: 999;
   display: flex;
   justify-content: center;
-}
+} */
 
 .profile-feed {
   margin-top: 20px;
@@ -53,13 +75,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 10%;
-  margin-right: 0;
-  margin-top: 20px;
+  margin-left: 13%;
+  /* margin-right: 10px; */
+  /* margin-top: 75px; */
   height: calc(100vh - 300px);
   overflow-y: auto;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+  /* margin-bottom: 20px; */
+  /* padding-bottom: 20px; */
+  width: 70%;
 }
 
 .username-tracks {
