--- a/frontend/src/components/ProfilePage/ProfilePage.css
+++ b/frontend/src/components/ProfilePage/ProfilePage.css
@@ -1,8 +1,12 @@
-.profile-page-container {
-    /* Styles for the profile page container */
-  }
+/* .profile-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Add any additional styles you need */
+
   
-  .profile-header-main {
+/* banner! */
+  /* .profile-header-main {
     position: sticky;
     top: 0;
     background-color: #f2f2f2;
@@ -12,21 +16,21 @@
     display: flex;
     margin-top: -20px;
   }
-  
-  .banner {
+   */
+  /* .banner {
     width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
-  }
-  
+  } */
+/*   
   .profile-info {
     display: flex;
     align-items: center;
     gap: 10px;
   }
-  
-  .profile-pic {
+   */
+  /* .profile-pic {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -41,11 +45,11 @@
   .follower-info div {
     font-weight: bold;
     color: #333;
-  }
-  
+  } */
+/*   
   .profile-feed {
     /* Styles for the profile feed section */
-  }
+
   
   .profile-image-userInfo {
     height: 100px;
@@ -57,14 +61,14 @@
     margin-left: 5px;
   }
   
-  .profile-header h2 {
+  /* .profile-header h2 {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
     color: rgb(0, 42, 255);
   }
-  
-  .profile-track-list {
+   */
+  /* .profile-track-list {
     margin-top: 20px;
   }
   
@@ -94,22 +98,13 @@
     font-size: 30px;
   }
   
-  .profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10%;
-    width: 50%;
-    font-family: Arial, sans-serif;
-    color: #333;
-  }
+   */
   
-  .username-tracks-title {
+  /* .username-tracks-title {
     color: #1da1f2;
     margin-bottom: 20px;
-  }
-  
+  } */
+/*   
   .profile-grid {
     display: flex;
     flex-direction: column;
@@ -121,7 +116,7 @@
     overflow-y: auto;
     margin-bottom: 20px;
     padding-bottom: 20px;
-  }
+  } */
   
   /* Additional CSS styles for the profile page content */
   
