--- a/frontend/src/components/Profile/ProfileHeader.css
+++ b/frontend/src/components/Profile/ProfileHeader.css
@@ -2,15 +2,13 @@
 
 .profile-header {
   position: fixed;
-  /* top: 0; */
   right: 0;
   bottom: 0;
   top: 170px;
   width: 300px; /* Adjust the width as needed */
   display: flex;
   flex-direction: column;
-  /* justify-content: flex-start;  */
-  align-items: center; 
+  align-items: center;
   background-color: #f2f2f2;
   padding: 20px;
 }
@@ -21,32 +19,15 @@
   border-radius: 150px;
   box-shadow: -.05rem 0 1rem #000;
 }
-/* 
-.profile-header > * {
-  margin-bottom: 10px;
-} */
-
-.profile-info > {
-  display: flex;
-  /* margin-top: 10px; */
-  /* position: absolute; */
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
-  justify-content: space-between;
-  /* flex-s: end; */
-  width: 500px; 
-}
 
 .profile-info > * {
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 .follower-info {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* gap: 10px; */
   gap: 10px;
   font-size: 14px;
 }
@@ -68,16 +49,6 @@
   margin-top: 20px;
 }
 
-/* .profile-header-main {
-  position: sticky;
-  top: 100;
-  background-color: #f2f2f2;
-  padding: 20px;
-  z-index: 999;
-  display: flex;
-  justify-content: center;
-} */
-
 .profile-feed {
   margin-top: 20px;
 }
@@ -87,15 +58,10 @@
   flex-direction: column;
   align-items: center;
   margin-left: 13%;
-  /* margin-right: 10px; */
-  /* margin-top: 75px; */
   height: calc(100vh - 300px);
   overflow-y: auto;
-  /* margin-bottom: 20px; */
-  /* padding-bottom: 20px; */
   width: 70%;
-} 
-
+}
 
 .follow-status button {
   padding: 8px 16px;
@@ -152,11 +118,15 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.track-filters button:hover {
+.track-filters button.active {
   background-color: #e6e6e6;
   color: #555;
 }
 
+.track-filters button:hover {
+  background-color: #e6e6e6;
+  color: #555;
+}
 
 .username-tracks {
   margin: 20px auto;
@@ -203,7 +173,6 @@
   background-color: #e6e6e6;
   color: #555;
 }
-
 
 /* For Follower/Following Modal */
 
@@ -279,20 +248,18 @@
 /* Styling for info box */
 .followers-content-box {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: center;
-  /* border: 1px solid black; */
   margin-top: 20px;
-
 }
 
 .followers-content-box:hover {
   cursor: pointer;
 }
+
 .followers-content-img {
   max-width: 70px;
   margin-right: 30px;
-  /* max-height: 30px; */
   border-radius: 10px;
 }
 
