--- a/frontend/src/components/Tracks/Tracks.css
+++ b/frontend/src/components/Tracks/Tracks.css
@@ -212,3 +212,27 @@
   margin-top: 20px;
   background-color: white
 }
+
+.play-button-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+.play-button-overlay:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.play-button-overlay i {
+  color: white;
+  font-size: 40px;
+}
