--- a/frontend/src/components/Profile/ProfileHeader.css
+++ b/frontend/src/components/Profile/ProfileHeader.css
@@ -215,12 +215,15 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
+  z-index: 999;
+
   align-items: center;
   justify-content: center;
 }
 
 .follow-modal-content {
   position: relative;
+  z-index: 999;
   width: 375px;
   height: 420px;
   background-color: #fff;
