--- a/frontend/src/components/SessionForms/LoginForm.css
+++ b/frontend/src/components/SessionForms/LoginForm.css
@@ -1,69 +1,85 @@
-.session-form-container {
-    display: flex;
-    margin-top: 50px;
-    align-items: center;
-    justify-content: center;
+.login-page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f7f7f7;
 }
 
+.login-form-container {
+  width: 320px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-.session-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
-    margin: 0 auto;
-    padding: 50px;
-    background-color: #f8f8f8;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .session-form h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
-  }
-  
-  .errors {
-    margin-bottom: 10px;
-    font-size: 14px;
-    color: #ff0000;
-  }
-  
-  label {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-  
-  span {
-    margin-bottom: 5px;
-    font-size: 16px;
-    color: #333;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #555;
-  }
+.form-title {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+}
 
- 
-  
+.form-subtitle {
+  font-size: 14px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #888;
+}
+
+.form-heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-label-text {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.errors {
+  font-size: 12px;
+  color: #f00;
+  margin-top: 5px;
+}
+
+.form-submit-btn {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.form-link-label {
+  font-size: 14px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.form-link {
+  color: #4caf50;
+  text-decoration: none;
+}
+
