--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -1,37 +1,82 @@
-.signup-form h1 {
-  margin-bottom: 20px;
-  font-size: 44px;
-  font-family: "Montserrat", sans-serif;
-  background: linear-gradient(45deg, #041E42, #00FFB0, #000000);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+/* SignupForm.css */
 
-.form-container2 {
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.signup-page-container {
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 30%;
-  height: auto;  /* Adjust the height to auto */
-  padding: 20px; /* Add padding to the container */
-  margin-top: 125px;
-  margin-bottom: 30px;
-  background-color: #F8F8F8;
+  align-items: center;
+  height: 100vh;
+}
+
+.signup-form-container {
+  background-color: #f6f6f6;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 2;
-  overflow: auto; /* Ensures that the content fits within the container */
+  padding: 20px;
+  width: 400px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.signup-form {
-  width: 100%; /* Ensures the form fits within the container */
+.signup-tag-line {
+  text-align: center;
+  margin-bottom: 30px;
 }
 
-.signup-form label {
-  margin-bottom: -5px; /* adjust this value to suit */
+.signup-title {
+  font-size: 32px;
+  margin: 0;
+  color: #333;
 }
 
+.signup-subtitle {
+  font-size: 16px;
+  color: #666;
+  margin: 10px 0;
+}
+
+.signup-heading {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.signup-label {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.signup-label-text {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.signup-input-field {
+  width: 100%;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+}
+
+.signup-errors {
+  color: red;
+  margin-top: 5px;
+  font-size: 12px;
+}
+
+.signup-submit-btn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #333;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+}
+
+.signup-submit-btn:hover {
+  background-color: #555;
+}
