--- a/frontend/src/components/MusicBar/MusicBar.css
+++ b/frontend/src/components/MusicBar/MusicBar.css
@@ -102,30 +102,7 @@
     padding: 10px 15px;
     background-color: rgb(0, 0, 0);
 }
-
-.rhap_container:focus:not(:focus-visible) {
-    outline: 0;
-}
-
-.rhap_container svg {
-    vertical-align: initial;
-}
-
-.rhap_header {
-    margin-bottom: 10px;
-}
-
-.rhap_footer {
-    margin-top: 5px;
-}
-
-.rhap_main {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
- 
-}
-
+/* 
 .rhap_stacked .rhap_controls-section {
     margin-top: 8px;
 }
@@ -152,7 +129,7 @@
 
 .rhap_stacked-reverse .rhap_controls-section {
     margin-bottom: 8px;
-}
+} */
 
 .rhap_progress-section {
     display: flex;
@@ -173,6 +150,8 @@
     cursor: pointer;
     user-select: none;
     -webkit-user-select: none;
+    color: black;
+
 }
 
 .rhap_progress-container:focus:not(:focus-visible) {
