--- a/frontend/src/components/MusicFileUpload/MusicFileUpload.css
+++ b/frontend/src/components/MusicFileUpload/MusicFileUpload.css
@@ -112,7 +112,7 @@ input[type="file"]:focus + .file-upload-button {
 
 input[type="submit"] {
   padding: 10px 20px;
-  background-color: #4caf50;
+  background-color: rgb(108, 108, 255);
   color: white;
   border: none;
   border-radius: 4px;
