--- a/frontend/src/components/SessionForms/LoginForm.css
+++ b/frontend/src/components/SessionForms/LoginForm.css
@@ -3,19 +3,24 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 110vw;
   background-color: #f7f7f7;
 }
 
 .login-form-container {
-  width: 320px;
+  height: 70vh;
+  width: 30vw;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .form-title {
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
   text-align: center;
   margin-bottom: 10px;
@@ -31,16 +36,17 @@
 .form-heading {
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .form-label {
-  display: block;
-  margin-bottom: 10px;
+  display: flex;
+  margin-bottom: 20px;
+  flex-direction: column;
 }
 
 .form-label-text {
-  font-size: 14px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 5px;
 }
@@ -51,6 +57,7 @@
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  margin-top: 5px;
 }
 
 .errors {
@@ -64,14 +71,30 @@
   padding: 10px;
   font-size: 16px;
   font-weight: bold;
-  background-color: #4caf50;
+  background-color: rgb(108, 108, 255);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  /* margin-left: 110px; */
+  /* margin-top: 10px; */
+}
+
+.form-demo-user-btn {
+  width: 100%;
+  /* padding: 10px; */
+  font-size: 16px;
+  font-weight: bold;
+  background-color: rgb(0, 0, 0);
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   margin-top: 10px;
-}
+  margin-bottom: 20px;
+  /* margin-left: 250px; */
 
+}
 .form-link-label {
   font-size: 14px;
   margin-top: 10px;
@@ -79,7 +102,7 @@
 }
 
 .form-link {
-  color: #4caf50;
+  color: rgb(108, 108, 255);
   text-decoration: none;
 }
 
