--- a/frontend/src/components/Tracks/Tracks.css
+++ b/frontend/src/components/Tracks/Tracks.css
@@ -9,10 +9,12 @@
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 80%;
+  overflow: hidden;
 }
 
 .tracks-container {
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   align-items: center;
   margin-left: 15%;
@@ -38,7 +40,23 @@
   height: calc(100vh - 210px);
   overflow-y: auto;
   margin-bottom: 40px;
+  /* overflow: hidden; */
+  /* this may be an error . error25 */
   padding-bottom: 20px;
+}
+
+
+.tracks-container-index::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar width */
+}
+
+/* Optionally, you can style scrollbar track and thumb */
+.tracks-container-index::-webkit-scrollbar-track {
+  background: transparent; /* Track color */
+}
+
+.tracks-container-index::-webkit-scrollbar-thumb {
+  background: transparent; /* Thumb color */
 }
 
 .tracks-container-index .track-item {
@@ -192,6 +210,8 @@
   display: flex;
   justify-content: center;
   margin-right: 20px;
+  overflow: hidden;
+  
 }
 
 .main-content-tracks {
@@ -202,6 +222,8 @@
   max-width: 1200px;
   flex-direction: column;
   margin-right: 100px;
+  overflow: hidden;
+  
   /* margin-right: 10px; */
 }
 
@@ -210,8 +232,16 @@
 
 }
 
+.tracks-index {
+  font-size: 30px;
+  text-align: center;
+  position: absolute;
+  overflow: hidden;
+}
+
 .main-content-tracks-index .track-item {
-  width: 150%;
+  width: 140%;
+  overflow: hidden;
   margin-right: 30%;
 }
 .tracks {
